# sanya_rgz

./: CMakeLists.txt  a.out  main.cpp  main_one_file.cpp
src/: config.hpp
src/io/: io.cpp  io.hpp
src/operations/: choose_operation.cpp  choose_operation.hpp  divide.cpp  divide.hpp  multiply.cpp  multiply.hpp  sum.cpp  sum.hpp
src/str_num/: str_num.cpp  str_num.hpp
